<resources>
    <string name="app_name">Github User</string>
    <string name="tvTitleSplash">Submission Github User</string>
    <string name="created_by_fachmi_dimas_ardhana">Created by Fachmi Dimas Ardhana</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username : </string>
    <string name="following">Following : </string>
    <string name="followers">Followers : </string>
    <string name="dash">-</string>
    <string name="repository">Repository</string>
    <string name="txtfollowers">Followers</string>
    <string name="txtfollowing">Following</string>
    <string name="more_detail_about_users">More Detail About Users</string>
    <string name="company">Company :</string>
    <string name="location">Location :</string>
    <string name="logo_github">Logo Github</string>
    <string name="foto_detail">Foto Detail</string>
    <string name="foto_idcamp">Foto IDCamp</string>
    <string name="foto_android">foto android</string>

</resources>