<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/llKesatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUtama"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:ignore="MissingConstraints"
            android:layout_marginEnd="16dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/fullNameUtama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:fontFamily="@font/manrope_extrabold"
                android:textSize="18sp"
                android:maxLines="2"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:fontFamily="@font/manrope_medium"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/usernameUtama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/manrope_bold"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="16sp"
                    android:fontFamily="@font/manrope_semibold"/>

                <TextView
                    android:id="@+id/tvFollowingUtama"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/manrope_semibold"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="16sp"
                    android:fontFamily="@font/manrope_semibold" />

                <TextView
                    android:id="@+id/tvFollowerUtama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/manrope_semibold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>